--- a/manj_zsh.rc
+++ b/manj_zsh.rc
@@ -56,8 +56,8 @@ path+=(
 )
 
 ## youtube-dl
-alias yt='youtube-dl -f "bestvideo[ext=mp4]+bestaudio[ext=m4a]/bestvideo+bestaudio" --merge-output-format mp4'
-alias mp3='youtube-dl -x --embed-thumbnail --audio-format mp3'
+alias yt='yt-dlp -f "bestvideo[ext=mp4]+bestaudio[ext=m4a]/bestvideo+bestaudio" --merge-output-format mp4'
+alias mp3='yt-dlp -x --embed-thumbnail --audio-format mp3'
 
 ## colorls
 # source $(dirname $(gem which colorls))/tab_complete.sh
