--- a/for_gitpod/.gitpod.yml
+++ b/for_gitpod/.gitpod.yml
@@ -1,59 +1,59 @@
 vscode:
   extensions:
-    - abusaidm.html-snippets
+    - aaron-bond.better-comments
     - adpyke.codesnap
-    - alexcvzz.vscode-sqlite
-    - alor-pretatma.easy-runner
-    - auchenberg.vscode-browser-preview
-    - cweijan.vscode-ssh
+    - af4jm.vscode-m3u
+    - bitwisecook.tcl
     - DavidAnson.vscode-markdownlint
-    - donjayamanne.githistory
-    - donjayamanne.jquerysnippets
+    - DEVSENSE.phptools-vscode
+    - DEVSENSE.profiler-php-vscode
     - dracula-theme.theme-dracula
-    - eamodio.gitlens
-    - ecmel.vscode-html-css
     - esbenp.prettier-vscode
-    - felixfbecker.css-stacking-contexts
+    - ex-codes.pine-script-syntax-highlighter
     - formulahendry.auto-close-tag
     - formulahendry.auto-rename-tag
+    - foxundermoon.shell-format
+    - gencay.vscode-chatgpt
     - GitHub.copilot
     - gitpod.gitpod-desktop
-    - HookyQR.beautify
+    - jeff-hykin.better-shellscript-syntax
+    - JuanBlanco.solidity
+    - kejun.devtoys
     - KevinRose.vsc-python-indent
-    - lonefy.vscode-JS-CSS-HTML-formatter
+    - laktak.hjson
     - magicstack.MagicPython
     - mechatroner.rainbow-csv
-    - mhutchie.git-graph
     - mongodb.mongodb-vscode
     - ms-azuretools.vscode-docker
     - MS-CEINTL.vscode-language-pack-tr
-    - ms-pyright.pyright
+    - ms-python.isort
     - ms-python.python
     - ms-python.vscode-pylance
     - ms-toolsai.jupyter
     - ms-toolsai.jupyter-keymap
+    - ms-toolsai.jupyter-renderers
+    - ms-toolsai.vscode-jupyter-cell-tags
+    - ms-toolsai.vscode-jupyter-slideshow
     - ms-vscode-remote.remote-containers
     - ms-vscode-remote.remote-ssh
     - ms-vscode-remote.remote-ssh-edit
     - ms-vscode-remote.remote-wsl
     - ms-vscode-remote.vscode-remote-extensionpack
+    - ms-vscode.live-server
+    - ms-vscode.remote-explorer
     - ms-vsliveshare.vsliveshare
     - NoahSyn10.pydoctestbtn
+    - Okteto.remote-kubernetes
     - PKief.material-icon-theme
-    - quanzaiyu.vscode-json-enhanced
     - RandomFractalsInc.vscode-data-preview
     - rangav.vscode-thunder-client
-    - redhat.vscode-commons
-    - redhat.vscode-xml
-    - redhat.vscode-yaml
+    - rifi2k.format-html-in-php
     - ritwickdey.LiveServer
     - samuelcolvin.jinjahtml
-    - Shan.code-settings-sync
     - SonarSource.sonarlint-vscode
     - sourcery.sourcery
     - TabNine.tabnine-vscode
-    - thekalinga.bootstrap4-vscode
-    - WyattFerguson.jinja2-snippet-kit
-    - xabikos.JavaScriptSnippets
-    - zaaack.markdown-editor
+    - VisualStudioExptTeam.intellicode-api-usage-examples
+    - VisualStudioExptTeam.vscodeintellicode
+    - wingrunr21.vscode-ruby
     - zhuangtongfa.material-theme
