--- a/for_gitpod/.vscode/settings.json
+++ b/for_gitpod/.vscode/settings.json
@@ -1,41 +1,77 @@
 {
-    "tabnine.experimentalAutoImports": true,
+    "terminal.integrated.defaultProfile.linux": "zsh",
+    "terminal.integrated.defaultProfile.osx": "zsh",
+    "terminal.integrated.fontFamily": "'JetBrainsMono Medium Nerd Font', 'MesloLGS NF', 'Hack Nerd Font', 'SourceCodePro+Powerline+Awesome Regular', 'Droid Sans Mono', 'monospace', 'Droid Sans Fallback'",
+    "terminal.integrated.rendererType": "dom",
+    "terminal.integrated.fontSize": 16,
+    "terminal.integrated.lineHeight": 1,
+    // "terminal.integrated.letterSpacing": 2,
+    "terminal.external.linuxExec": "truecolor",
+
+    "editor.bracketPairColorization.enabled": true,
+    "editor.guides.bracketPairs":"active",
+    "editor.fontSize": 16,
+    "editor.largeFileOptimizations": false,
+    "editor.fontFamily": "'JetBrainsMono Nerd Font', 'Droid Sans Mono', 'monospace', 'Droid Sans Fallback'",
+    "editor.linkedEditing": true,
+    "editor.inlineSuggest.enabled": true,
+    "editor.unicodeHighlight.ambiguousCharacters": false,
+    "editor.unicodeHighlight.invisibleCharacters": false,
+
+    "workbench.iconTheme": "material-icon-theme",
+    "workbench.colorTheme": "Dracula",
+
+    "explorer.confirmDelete": false,
+
+    "security.workspace.trust.untrustedFiles": "open",
+
+    "liveServer.settings.donotVerifyTags": true,
+
+    "github.copilot.enable": {
+        "*": true,
+        "yaml": true,
+        "plaintext": true,
+        "markdown": true,
+        "python": true
+    },
+
+    "notebook.cellToolbarLocation": {
+        "default": "right",
+        "jupyter-notebook": "left"
+    },
+
     "workbench.editorAssociations": {
         "*.ipynb": "jupyter-notebook"
     },
-    "editor.largeFileOptimizations": false,
-    "editor.fontFamily": "'JetBrainsMono Nerd Font', 'Droid Sans Mono', 'monospace', 'Droid Sans Fallback'",
+
     "[json]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
+    "[jsonc]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
     "[html]": {
-        "editor.defaultFormatter": "vscode.html-language-features"
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "[javascript]": {
         "editor.defaultFormatter": "vscode.typescript-language-features"
     },
-    "python.formatting.provider": "black",
-    "terminal.integrated.shell.osx": "/bin/zsh",
-    "terminal.integrated.fontFamily": "'JetBrainsMono Medium Nerd Font', 'MesloLGS NF', 'Hack Nerd Font', 'SourceCodePro+Powerline+Awesome Regular', 'Droid Sans Mono', 'monospace', 'Droid Sans Fallback'",
-    "terminal.integrated.rendererType": "dom",
-    "terminal.integrated.fontSize": 18,
-    "terminal.integrated.lineHeight": 1,
-    "terminal.integrated.letterSpacing": 2,
-    "editor.fontSize": 18,
-    "terminal.external.linuxExec": "truecolor",
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.python"
+    },
+    "[dockercompose]": {
+        "editor.defaultFormatter": "ms-azuretools.vscode-docker"
+    },
+
     "auto-rename-tag.activationOnLanguage": [
         "html",
         "xml",
         "php",
         "javascript"
     ],
-    "workbench.iconTheme": "material-icon-theme",
-    "editor.linkedEditing": true,
-    "workbench.colorTheme": "Dracula",
-    "notebook.cellToolbarLocation": {
-        "default": "right",
-        "jupyter-notebook": "left"
-    },
-    "editor.inlineSuggest.enabled": true,
-    "redhat.telemetry.enabled": true
+
+    "tabnine.experimentalAutoImports": true,
+    "sourcery.token": "1111111111111111111111",
+    "sonarlint.ls.javaHome": "/usr/lib/jvm/java-19-openjdk/",
+    "sonarlint.pathToNodeExecutable": "/bin/node"
 }
