--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1456,3 +1456,6 @@ run 'cut -c3- ~/.tmux.conf | sh -s _apply_configuration'
 set -g mouse on
 # Sane Scrolling:
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
+
+# imgcat
+set-option -g allow-passthrough on
