--- a/for_gitpod/.gitpod.yml
+++ b/for_gitpod/.gitpod.yml
@@ -3,7 +3,9 @@ vscode:
     - aaron-bond.better-comments
     - adpyke.codesnap
     - af4jm.vscode-m3u
+    - AnbuselvanRocky.bootstrap5-vscode
     - bitwisecook.tcl
+    - cstrap.python-snippets
     - DavidAnson.vscode-markdownlint
     - DEVSENSE.phptools-vscode
     - DEVSENSE.profiler-php-vscode
@@ -13,27 +15,25 @@ vscode:
     - formulahendry.auto-close-tag
     - formulahendry.auto-rename-tag
     - foxundermoon.shell-format
-    - gencay.vscode-chatgpt
     - GitHub.copilot
+    - GitHub.copilot-labs
+    - github.vscode-github-actions
     - gitpod.gitpod-desktop
+    - Janne252.fontawesome-autocomplete
     - jeff-hykin.better-shellscript-syntax
-    - JuanBlanco.solidity
     - kejun.devtoys
     - KevinRose.vsc-python-indent
     - laktak.hjson
     - magicstack.MagicPython
     - mechatroner.rainbow-csv
+    - mintlify.document
     - mongodb.mongodb-vscode
     - ms-azuretools.vscode-docker
     - MS-CEINTL.vscode-language-pack-tr
     - ms-python.isort
     - ms-python.python
     - ms-python.vscode-pylance
-    - ms-toolsai.jupyter
-    - ms-toolsai.jupyter-keymap
     - ms-toolsai.jupyter-renderers
-    - ms-toolsai.vscode-jupyter-cell-tags
-    - ms-toolsai.vscode-jupyter-slideshow
     - ms-vscode-remote.remote-containers
     - ms-vscode-remote.remote-ssh
     - ms-vscode-remote.remote-ssh-edit
@@ -41,11 +41,17 @@ vscode:
     - ms-vscode-remote.vscode-remote-extensionpack
     - ms-vscode.live-server
     - ms-vscode.remote-explorer
+    - ms-vscode.remote-server
     - ms-vsliveshare.vsliveshare
+    - nico-castell.linux-desktop-file
+    - njpwerner.autodocstring
+    - njqdev.vscode-python-typehint
     - NoahSyn10.pydoctestbtn
+    - NomicFoundation.hardhat-solidity
+    - noxiz.jinja-snippets
     - Okteto.remote-kubernetes
     - PKief.material-icon-theme
-    - RandomFractalsInc.vscode-data-preview
+    - pranaygp.vscode-css-peek
     - rangav.vscode-thunder-client
     - rifi2k.format-html-in-php
     - ritwickdey.LiveServer
@@ -55,5 +61,7 @@ vscode:
     - TabNine.tabnine-vscode
     - VisualStudioExptTeam.intellicode-api-usage-examples
     - VisualStudioExptTeam.vscodeintellicode
+    - Vue.volar
+    - wholroyd.jinja
     - wingrunr21.vscode-ruby
     - zhuangtongfa.material-theme
