--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1458,4 +1458,4 @@ set -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e; send-keys -M'"
 
 # imgcat
-set-option -g allow-passthrough on
+#set-option -g allow-passthrough on
