--- a/.dots/etc/tlp.conf
+++ b/.dots/etc/tlp.conf
@@ -5,7 +5,7 @@
 
 # --- CPU / Governor / Turbo ---
 CPU_SCALING_GOVERNOR_ON_BAT=powersave
-CPU_SCALING_GOVERNOR_ON_AC=schedutil
+CPU_SCALING_GOVERNOR_ON_AC=performance
 
 # Intel pstate: turbo kapalı (bataryada), açık (AC)
 CPU_BOOST_ON_BAT=0
@@ -49,6 +49,11 @@ WIFI_PWR_ON_AC=off
 # --- USB ---
 # Kullanılmayan USB cihazlarını uyut
 USB_AUTOSUSPEND=1
+
+# --- Runtime Power Management ---
+# Kullanılmayan PCIe/USB/Thunderbolt aygıtlarını çalışırken uyut
+RUNTIME_PM_ON_AC=auto
+RUNTIME_PM_ON_BAT=on
 
 # --- Ses ---
 # Ses aygıtını bataryada uyut, AC’de anında hazır
